--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
       </section>
 
       <section id="skills">
-        <h2>My Skills</h2>
+        <h2>My Hobbies</h2>
         <ul>
-          <li>Coding</li>
-          <li>Gamer</li>
+          <li>Badminton</li>
+          <li>Membuat Poster</li>
+          <li>Gaming</li>
         </ul>
       </section>
 
